src/component/AboutPage/Leadership/style.css
.vh-15 {
  height: 15vh;
}

.container-h {
  height: 375vh;
}

.cards-display {
  justify-content: center;
}

.border{
  border-color: white;
  border-radius: 10px;
  /* width: 1000px; */
}
/* Main container for section*/
.leadership-section{
  width: 184vh;
  max-width: none;
  padding: 0px;
  margin: 0px;
  background-color: black;
}

.leadership-header{
  margin-left: 10.72vh;
  margin-right: auto;
  margin-top: 14vh;
  width: fit-content;
  height: 12vh;
  display: flex; /* Make it a flex container */
  flex-direction: column; /* Stack items vertically  */
  padding:0px;
}
.leadership-text{
  font-family: "Space Mono";
  color: #ffbf3c;
  text-transform: lowercase;
  /* font-size: calc(min(3vh, 3vw)); */
  font-size: 2.22vh;
  height: min-content;
  margin: 0px;
  margin-left: auto;
  box-sizing: border-box;
  line-height: 2.33vh;
  padding: 0px;
}

.meet-the-team-text{
  font-family: "Space Mono";
  color: #ffffff;
  font-weight: 700;
  text-transform: uppercase;
  font-size: 10.2vh;
  word-wrap: break-word;
  height: 10.2vh;
  line-height: 10.2vh;
  width:fit-content;
  white-space: nowrap;
  margin: 0px;
  padding: 0px;
  margin-top:0px;
  box-sizing: border-box;
}

.cards-section{
  margin: 0x;
  width: auto;
  height: 66.44%;
  /* margin-left: 62.44vh; */
  margin-left: 67vh;
  margin-right: 10.72vh;
  /* margin-top: 2.88vh; */
  margin-top: 4vh;
  display: flex;
  flex-direction: row-reverse;
}


.text-no-wrap{
  white-space: nowrap;
}

@media only screen and (max-device-width: 650px) {
  .cards-display {
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    z-index: 1;
  }

  .leadership-section{
    width: auto;
    height: 600vw;
  }

  .leadership-header{
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10vw;
    margin-top: 14vh;
    width: 88.21vw;
    height: 14.90vw;
  }
  .leadership-text{
    font-size: 4.5vw;
    line-height: 4vw;
  }
  
  .meet-the-team-text{
    font-size: 11vw;
    height: 14.90vw;
    line-height: 11vw;
  }
}

